[gd_scene load_steps=2 format=3 uid="uid://cmkin2u780vky"]

[ext_resource type="Script" path="res://scenes/menus/settings/menu_settings.gd" id="1_fnj63"]

[node name="MenuSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fnj63")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -120.0
offset_right = 219.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LabelVolumeMaster" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="LabelVolueMusic" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="LabelVolueSound" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sound Volume"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HSliderVolumeMaster" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSliderVolumeMusics" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSliderVolumeSound" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
max_value = 1.0
step = 0.01
value = 1.0

[node name="ButtonBack" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer2/HSliderVolumeMaster" to="." method="_on_h_slider_volume_master_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer2/HSliderVolumeMusics" to="." method="_on_h_slider_volume_musics_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer2/HSliderVolumeSound" to="." method="_on_h_slider_volume_sound_value_changed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_button_back_pressed"]
